--- a/service/src/main/resources/api.yml
+++ b/service/src/main/resources/api.yml
@@ -9,7 +9,7 @@ servers:
 paths:
   /rooms/{id}:
     get:
-      summary: 'Return a romm by ID'
+      summary: 'Return a room by ID'
       operationId: getRoom
       tags:
         - room
@@ -34,34 +34,75 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ResponseError'
+
+  /rooms:
+    post:
+      summary: 'Create a room'
+      operationId: createRoom
+      tags:
+        - room
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateRoomDTO'
+        required: true
+      responses:
+        201:
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RoomDTO'
+        422:
+          $ref: '#/components/responses/UnprocessableEntity'
+
 components:
   schemas:
-    RoomDTO:
+    CreateRoomDTO:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
         name:
           type: string
         seats:
           type: integer
+
+    RoomDTO:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/CreateRoomDTO'
+        - type: object
+          properties:
+            id:
+              type: integer
+              format: int64
+
     ResponseError:
       type: object
       required:
-        - code
-        - message
+        - field
+        - errorCode
       properties:
-        code:
-          type: integer
-          format: int32
-        status:
+        field:
           type: string
-        message:
+        errorCode:
           type: string
+
+  responses:
+    UnprocessableEntity:
+      description: The server understands the content type of the request entity but was unable to process
+        the contained instructions.
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/ResponseError'
+
   securitySchemes:
     BasicAuth:
       type: http
       scheme: basic
+
 security:
   - BasicAuth: []
