--- a/service/src/main/resources/api.yml
+++ b/service/src/main/resources/api.yml
@@ -145,6 +145,33 @@ paths:
         422:
           description: '#/components/responses/UnprocessableEntity'
 
+    put:
+      summary: 'Updates an allocation by ID'
+      operationId: updateAllocation
+      tags:
+        - allocation
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the allocation
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateAllocationDTO'
+        required: true
+      responses:
+        204:
+          description: 'Updated successfully'
+        404:
+          description: Not found
+        422:
+          $ref: '#/components/responses/UnprocessableEntity'
+
 components:
   schemas:
     UpdateRoomDTO:
@@ -170,7 +197,7 @@ components:
               type: integer
               format: int64
 
-    CreateAllocationDTO:
+    UpdateAllocationDTO:
       type: object
       properties:
         subject:
@@ -181,13 +208,20 @@ components:
         endAt:
           type: string
           format: date-time
-        roomId:
-          type: integer
-          format: int64
-        employeeName:
-          type: string
-        employeeEmail:
-          type: string
+
+    CreateAllocationDTO:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/UpdateAllocationDTO'
+        - type: object
+          properties:
+            roomId:
+              type: integer
+              format: int64
+            employeeName:
+              type: string
+            employeeEmail:
+              type: string
 
     AllocationDTO:
       type: object
